--- a/css/main.css
+++ b/css/main.css
@@ -576,3 +576,7 @@ img#imagepost {
     .red{
         color:green;
     }
+    .main .row{
+            margin-right: 0px; 
+             margin-left: 0px; 
+    }
